# packwiz-modlist

./: .env  .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: tagged_release.yml
completions/: _packwizml  _packwizml.ps1  packwizml.bash  packwizml.fish
src/: app.rs  args.rs  cache.rs  consts.rs  data.rs  error.rs  macros.rs  main.rs  misc.rs  object.rs  output.rs  util.rs
src/parser/: mod.rs  packwiz.rs  text.rs
src/request/: curseforge.rs  mod.rs  modrinth.rs
src/request/curseforge/: items.rs  mod.rs
src/request/modrinth/: items.rs  mod.rs
template/: markdown.md
