[package]
name = "packwiz-modlist"
description = "Creates a modlist from packwiz"
authors = ["Ricky12Awesome"]
version = "2.0.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
keywords = ["packwiz", "modding", "minecraft"]
categories = ["command-line-utilities"]
repository = "https://github.com/Ricky12Awesome/packwiz-modlist"
homepage = "https://github.com/Ricky12Awesome/packwiz-modlist"
build = "build.rs"

# Rewrite branch, don't want to accidentally publish
publish = false

[[bin]]
name = "packwizml"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
