[package]
name = "packwiz-modlist"
description = "Creates a modlist from packwiz"
authors = ["Ricky12Awesome"]
version = "2.0.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
keywords = ["packwiz", "modding", "minecraft"]
categories = ["command-line-utilities"]
repository = "https://github.com/Ricky12Awesome/packwiz-modlist"
homepage = "https://github.com/Ricky12Awesome/packwiz-modlist"
build = "build.rs"

# Rewrite branch, don't want to accidentally publish
publish = false

[[bin]]
name = "packwizml"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.5", features = ["cargo", "derive"] }

minreq = { version = "2.11", features = ["https-rustls", "json-using-serde", "urlencoding"] }

serde = { version = "1.0", features = ["derive"] }
serde_with = "3.7"
serde_json = "1.0"
toml = "0.8"

itertools = "0.12"
thiserror = "1.0"
colored = "2.1"
log = "0.4"
simple_logger = "4.3"

[build-dependencies]
dotenv-build = "0.1"
